caract by location
